--- a/docker-compose-psp.yaml
+++ b/docker-compose-psp.yaml
@@ -37,6 +37,12 @@ services:
       EVENT_SECRET: event-secret
   psp:
     image: psp
+    restart: always
+    volumes:
+      - type: bind
+        source: .
+        target: /app
+        read_only: false
     build: 
       context: .
       dockerfile: ./Dockerfile.psp
@@ -51,7 +57,13 @@ services:
 #-------------------------
 # BITCOIN PROVIDER
   btc-provider:
-    image:btc-pr
+    image: btc-pr
+    restart: always
+    volumes:
+      - type: bind
+        source: .
+        target: /app
+        read_only: false
     build: 
       context: .
       dockerfile: ./Dockerfile.bitcoinprovider
@@ -68,6 +80,12 @@ services:
 # BANK PROVIDER 
   bank-provider:
       image: bnk-pr
+      restart: always
+      volumes:
+        - type: bind
+          source: .
+          target: /app
+         read_only: false
       build: 
         context: .
         dockerfile: ./Dockerfile.bankprovider
@@ -83,6 +101,12 @@ services:
 # PAYPAL PROVIDER 
   paypal-provider: 
       image: pp-provider
+      restart: always
+      volumes:
+        - type: bind
+          source: .
+          target: /app
+         read_only: false
       build: 
         context: .
         dockerfile: ./Dockerfile.paypalprovider
@@ -96,6 +120,8 @@ services:
         NODE_TLS_REJECT_UNAUTHORIZED: "0" 
   reverseproxy-psp:
       image: rvprpsp
+      restart: always
+      
       build:
         dockerfile: ./Dockerfile.psp.nginx
       ports:
@@ -104,6 +130,6 @@ services:
           - 1235:1235
           - 1236:1236          
           - 3000:3000
-      restart: always
+
 volumes:
   db_data_psp:
