--- a/docker-compose-webshop-2.yaml
+++ b/docker-compose-webshop-2.yaml
@@ -39,6 +39,12 @@ services:
 #FRONT:
   web_shop_2_front:
     image: ws2f
+    restart: always
+    volumes:
+      - type: bind
+        source: .
+        target: /app
+        read_only: false
     build: 
       context: .
       dockerfile: ./Dockerfile.webshop2front
@@ -52,6 +58,12 @@ services:
 #ACTIONS 
   web_shop_2_actions:
     image: ws2a
+    restart: always
+    volumes:
+      - type: bind
+        source: .
+        target: /app
+        read_only: false
     build: 
       context: .
       dockerfile: ./Dockerfile.webshop2actions
@@ -77,6 +89,7 @@ services:
  
   reverseproxy-ws2:
       image: rvpws2
+      restart: always
       build:
         dockerfile: ./Dockerfile.ws2.nginx
       ports:
