--- a/apps/psp/package.json
+++ b/apps/psp/package.json
@@ -25,7 +25,9 @@
   },
   "scripts": {
     "start": "next dev",
-    "dev": "next dev",
+    "dev": "next dev",    
+    "prod": "next start",
+
     "build": "next build",
     "test": "next test"
   },
