--- a/apps/bank-provider/package.json
+++ b/apps/bank-provider/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "next dev -p 1235",
     "start": "next dev -p 1235",
+    "prod": "next start -p 1235",
     "build": "next build",
     "build-prod": "next build",
     "build:tailwind": "postcss src/scss/base.scss -o src/scss/tailwind.scss",
