--- a/apps/pcc/package.json
+++ b/apps/pcc/package.json
@@ -4,6 +4,8 @@
   "scripts": {
     "dev": "next dev -p 2222",
     "start": "next dev -p 2222",
+    "start": "next start -p 2222",
+
     "build": "next build",
     "build-prod": "next build",
     "build:tailwind": "postcss src/scss/base.scss -o src/scss/tailwind.scss",
