--- a/apps/bank-provider/.env.production
+++ b/apps/bank-provider/.env.production
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_HOST_ADDRESS=https://localhost:1235
+NEXT_PUBLIC_HOST_ADDRESS=https://192.168.43.234:1235
 HASURA_ADMIN_SECRET_HEADER_NAME = x-hasura-admin-secret
 HGE_ADMIN_SECRET = admin-secret
 HGE_ENDPOINT = https://reverseproxy-psp:8080
