--- a/apps/pcc/.env.production
+++ b/apps/pcc/.env.production
@@ -1,5 +1,5 @@
 NODE_TLS_REJECT_UNAUTHORIZED=0
-NEXT_PUBLIC_HOST_ADDRESS=https://localhost:2222
+NEXT_PUBLIC_HOST_ADDRESS=https://192.168.43.234:2222
 HGE_ENDPOINT = hhttps://reverseproxy-bank:30000
 SKIP_PREFLIGHT_CHECK=true
 HASURA_ADMIN_SECRET_HEADER_NAME = x-hasura-admin-secret
