--- a/docker-compose-webshop-1-M1.yaml
+++ b/docker-compose-webshop-1-M1.yaml
@@ -23,8 +23,8 @@ services:
       - 'host.docker.internal:host-gateway'
     environment:
       HASURA_GRAPHQL_DATABASE_URL: postgres://postgres:postgrespassword@postgres-webshop-1:5432/postgres
-      HASURA_GRAPHQL_ENABLE_CONSOLE: true
-      HASURA_GRAPHQL_DEV_MODE: true
+      HASURA_GRAPHQL_ENABLE_CONSOLE: 'true'
+      HASURA_GRAPHQL_DEV_MODE: 'true'
       HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
       HASURA_GRAPHQL_ADMIN_SECRET: admin-secret
       HASURA_GRAPHQL_ACCESS_KEY: admin-secret  
@@ -50,8 +50,8 @@ services:
       context: .
       dockerfile: ./Dockerfile.webshop1front
     environment:
-      REACT_APP_HGE_ENDPOINT: https://localhost:8081
-      SKIP_PREFLIGHT_CHECK: true
+      REACT_APP_HGE_ENDPOINT: https://192.168.43.234:8081
+      SKIP_PREFLIGHT_CHECK: 'true'
       PORT: 3001
       REACT_APP_PSP_API_KEY: 7b273382-9ac1-4728-8489-2b93b6f59fae
 #ACTIONS 
@@ -85,6 +85,7 @@ services:
   reverseproxy-ws1:
       image: rvprxyws1
       build:
+        context: .
         dockerfile: ./Dockerfile.ws1.nginx
       ports:
           - 8081:8081
