--- a/nginx.psp.conf
+++ b/nginx.psp.conf
@@ -35,6 +35,8 @@ http {
     }
  
     server {
+        underscores_in_headers on;
+
         listen 3000;
         location / {
             proxy_pass         http://psp;
@@ -48,6 +50,8 @@ http {
     }
 
     server {
+        underscores_in_headers on;
+
         listen 8080;
         location / {
             proxy_pass         http://graphql-engine-psp;
@@ -62,6 +66,8 @@ http {
     }
 
     server {
+        underscores_in_headers on;
+
         listen 1236;
         location / {
             proxy_pass         http://btc-provider;
@@ -75,6 +81,8 @@ http {
     }
     
     server {
+        underscores_in_headers on;
+
         listen 1235;
         location / {
             proxy_pass         http://bank-provider;
@@ -88,6 +96,8 @@ http {
     }
 
      server {
+         underscores_in_headers on;
+
         listen 1234;
         location / {
             proxy_pass         http://paypal-provider;
