--- a/nginx.ws1.conf
+++ b/nginx.ws1.conf
@@ -28,6 +28,8 @@ http {
  
     server {
         listen 3001;
+                    underscores_in_headers on;
+
         location / {
             proxy_pass         http://web_shop_1_front;
             proxy_redirect     off;
@@ -38,10 +40,13 @@ http {
             proxy_pass_request_headers      on;            
             proxy_read_timeout 300s;
             proxy_connect_timeout 75s;
+
         }
     }
 
     server {
+                    underscores_in_headers on;
+
         listen 8081;
         location / {
             proxy_pass         http://graphql-engine-web-shop-1;
@@ -52,11 +57,14 @@ http {
             proxy_set_header   X-Forwarded-Host $server_name;
             proxy_pass_request_headers      on;
             proxy_read_timeout 300s;
+
             proxy_connect_timeout 75s;
         }
     }
 
     server {
+        underscores_in_headers on;
+
         listen 2389;
         location / {
             proxy_pass         http://web_shop_1_actions;
