--- a/apps/bank-provider/.env
+++ b/apps/bank-provider/.env
@@ -1,5 +1,5 @@
-NEXT_PUBLIC_HOST_ADDRESS=http://localhost:1235
+NEXT_PUBLIC_HOST_ADDRESS=http://192.168.43.234:1235
 HASURA_ADMIN_SECRET_HEADER_NAME = x-hasura-admin-secret
 HGE_ADMIN_SECRET = admin-secret
-HGE_ENDPOINT = http://localhost:8080
+HGE_ENDPOINT = http://192.168.43.234:8080
 APP_ID=3722a7bb-47fa-4222-b2de-0c7008a9f3d0
