--- a/apps/bitcoin-provider/.env
+++ b/apps/bitcoin-provider/.env
@@ -1,6 +1,6 @@
-NEXT_PUBLIC_HOST_ADDRESS=http://localhost:1236
+NEXT_PUBLIC_HOST_ADDRESS=http://192.168.43.234:1236
 HASURA_ADMIN_SECRET_HEADER_NAME = x-hasura-admin-secret
 HGE_ADMIN_SECRET = admin-secret
-HGE_ENDPOINT = http://localhost:8080
+HGE_ENDPOINT = http://192.168.43.234:8080
 APP_ID=336ee769-8e1e-4df6-9e01-cd376f38b50e
 NGROK=http://6994-80-74-161-154.ngrok.io
