--- a/apps/paypal-provider/.env
+++ b/apps/paypal-provider/.env
@@ -1,6 +1,6 @@
-NEXT_PUBLIC_HOST_ADDRESS=http://localhost:1234
+NEXT_PUBLIC_HOST_ADDRESS=http://192.168.43.234:1234
 HASURA_ADMIN_SECRET_HEADER_NAME = x-hasura-admin-secret
 HGE_ADMIN_SECRET = admin-secret
-HGE_ENDPOINT = http://localhost:8080
+HGE_ENDPOINT = http://192.168.43.234:8080
 APP_ID=f9912c8f-8b3f-4bac-8a42-bd02aeb6d233
 PAY_PAL_BASE_URL=https://api-m.sandbox.paypal.com
