--- a/apps/psp/.env
+++ b/apps/psp/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_HGE_ENDPOINT = http://localhost:8080
+NEXT_PUBLIC_HGE_ENDPOINT = http://192.168.43.234:8080
 SKIP_PREFLIGHT_CHECK=true
 HASURA_ADMIN_SECRET_HEADER_NAME = x-hasura-admin-secret
 HGE_ADMIN_SECRET = admin-secret
