--- a/apps/web-shop-back/actions/.env
+++ b/apps/web-shop-back/actions/.env
@@ -1,9 +1,9 @@
 PORT = 2389
 HASURA_ADMIN_SECRET_HEADER_NAME = x-hasura-admin-secret
 HGE_ADMIN_SECRET = admin-secret
-HGE_ENDPOINT = http://localhost:8081
+HGE_ENDPOINT = http://192.168.43.234:8081
 TOKEN_KEY =somerandompasswordsomerandompasswordsomerandompassword
-PSP_ENDPOINT=http://localhost:8080
+PSP_ENDPOINT=http://192.168.43.234:8080
 PSP_API_KEY=7b273382-9ac1-4728-8489-2b93b6f59fae
 PSP_API_SECRET=b5c81921-db55-45f8-817e-ac91cbd08200
 PSP_KEY_HEADER=X-Hasura-PSP_API_KEY
