--- a/docker-compose-psp.yaml
+++ b/docker-compose-psp.yaml
@@ -68,7 +68,7 @@ services:
       context: .
       dockerfile: ./Dockerfile.bitcoinprovider
     environment:
-      NEXT_PUBLIC_HOST_ADDRESS: https://localhost:1236
+      NEXT_PUBLIC_HOST_ADDRESS: https://192.168.43.234:1236
       HASURA_ADMIN_SECRET_HEADER_NAME: x-hasura-admin-secret
       HGE_ADMIN_SECRET:  admin-secret
       HGE_ENDPOINT: https://reverseproxy-psp:8080
@@ -90,7 +90,7 @@ services:
         context: .
         dockerfile: ./Dockerfile.bankprovider
       environment:
-        NEXT_PUBLIC_HOST_ADDRESS: https://localhost:1235
+        NEXT_PUBLIC_HOST_ADDRESS: https://192.168.43.234:1235
         HASURA_ADMIN_SECRET_HEADER_NAME: x-hasura-admin-secret
         HGE_ADMIN_SECRET: admin-secret
         HGE_ENDPOINT: https://reverseproxy-psp:8080
@@ -111,7 +111,7 @@ services:
         context: .
         dockerfile: ./Dockerfile.paypalprovider
       environment:
-        NEXT_PUBLIC_HOST_ADDRESS: https://localhost:1234
+        NEXT_PUBLIC_HOST_ADDRESS: https://192.168.43.234:1234
         HASURA_ADMIN_SECRET_HEADER_NAME: x-hasura-admin-secret
         HGE_ADMIN_SECRET: admin-secret
         HGE_ENDPOINT: https://reverseproxy-psp:8080
