--- a/docker-compose-webshop-1.yaml
+++ b/docker-compose-webshop-1.yaml
@@ -50,7 +50,7 @@ services:
       context: .
       dockerfile: ./Dockerfile.webshop1front
     environment:
-      REACT_APP_HGE_ENDPOINT: https://localhost:8081
+      REACT_APP_HGE_ENDPOINT: https://192.168.43.234:8081
       SKIP_PREFLIGHT_CHECK: true
       PORT: 3001
       REACT_APP_PSP_API_KEY: 7b273382-9ac1-4728-8489-2b93b6f59fae
