--- a/apps/bank/.env
+++ b/apps/bank/.env
@@ -5,6 +5,7 @@ HGE_ADMIN_SECRET = admin-secret
 NEXT_PUBLIC_HOST_ADDRESS=https://192.168.43.74:1111
 BANK_ID=044
 BANK_CARD_ID=03660
+PCC_BASE_ADDRESS=https://192.168.43.74:2222
 KEY=D635166546A576D5A7134743777217A
 NODE_TLS_REJECT_UNAUTHORIZED=0
 
