--- a/apps/bitcoin-provider/.env
+++ b/apps/bitcoin-provider/.env
@@ -3,4 +3,4 @@ HASURA_ADMIN_SECRET_HEADER_NAME = x-hasura-admin-secret
 HGE_ADMIN_SECRET = admin-secret
 HGE_ENDPOINT = http://192.168.43.234:8080
 APP_ID=336ee769-8e1e-4df6-9e01-cd376f38b50e
-NGROK=http://6994-80-74-161-154.ngrok.io
+NGROK=https://a844-212-200-65-93.ngrok.io
