--- a/docker-compose-psp-M1.yaml
+++ b/docker-compose-psp-M1.yaml
@@ -72,7 +72,7 @@ services:
       HGE_ADMIN_SECRET:  admin-secret
       HGE_ENDPOINT: https://reverseproxy-psp:8080
       APP_ID: 336ee769-8e1e-4df6-9e01-cd376f38b50e
-      NGROK: https://6994-80-74-161-154.ngrok.io
+      NGROK: https://a844-212-200-65-93.ngrok.io
       NODE_TLS_REJECT_UNAUTHORIZED: "0" 
 
 #-------------------------
